Issues fixes mobile and alignment

--- a/Invessence/modules/web/src/main/webapp/resources/spark-layout/1_1/css/spark-layout.css
+++ b/Invessence/modules/web/src/main/webapp/resources/spark-layout/1_1/css/spark-layout.css
@@ -435,14 +435,17 @@ box-shadow: 0px 1px 0px 0px rgba(70,145,91,0.8);}
 
 
 .toggleMenu {
-	display: none;
-	background: #009abb;
-	padding: 10px 15px;
-	color: #fff;
-
+	background-color: #778D9B;
+	float: right;
+	font-size: 12px;
+	margin-right: 10px;
+	z-index: 999999;
+	margin-top: 7px!important;
+	height: auto!important;
+	padding: 6px 8px!important;
+	color: #F1F6F9;
 	position: absolute;
-	top: 5px;
-	z-index: 999999999;
+	top: 0;
 	right: 20px;
 }
 
@@ -513,7 +516,7 @@ box-shadow: 0px 1px 0px 0px rgba(70,145,91,0.8);}
 .nav li i  {
 
 	float: left;
-	color: #fff;
+	color: #000;
 }
 
 .nav > li > .parent {
@@ -585,18 +588,25 @@ box-shadow: 0px 1px 0px 0px rgba(70,145,91,0.8);}
 	border-top: 1px solid #1d7a62;
 }
 
+.nav > li:last-child{float: right;}
+
+.nav li.mobileonly {display: none;}
+
 @media screen and (max-width: 768px) {
 	.active {
 		display: block;
 	}
 
-	.nav {    width: 97%;
+	.nav {
+		width: 90%;
+        left: 3%;
 		position: absolute;
 		background-color: rgb(255, 255, 255);
-		left: 0px;
-		top: 69px;
+        margin: 0 auto;
+		top: 45px;
 		padding-top: 0px;
-		z-index: 11;}
+		z-index: 11;
+		}
 
 	.nav > li {
 		float: none;
@@ -633,6 +643,9 @@ box-shadow: 0px 1px 0px 0px rgba(70,145,91,0.8);}
 	}
 
 	.nav li ul {background-color: #ffffff;}
+	.nav > li:last-child{float: left;}
+
+	.nav li.mobileonly {display: block;}
 
 }
 
@@ -695,5 +708,7 @@ a.ui-commandlink{text-decoration: none !important; margin-right: 5px;}
 .box .btn:hover{
 	background-color: #5fcf80;
 }
+
+
 
 
